--- a/src/main/resources/static/qna/form.html
+++ b/src/main/resources/static/qna/form.html
@@ -64,7 +64,7 @@
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="../../templates/index.html">Posts</a></li>
-                <li><a href="#" role="button">로그아웃</a></li>
+                <li><a href="../user/logout" role="button">로그아웃</a></li>
                 <li><a href="#" role="button">개인정보수정</a></li>
             </ul>
         </div>
